--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
                 <div class="flex h-full  flex-col justify-center items-center gap-6">
                     <h1 class="text-white text-6xl font-bold text-center">End-to-End Travel With <br> </h1>
                     <h1><span class="text-[#1DD100] text-6xl font-bold text-center">Sakura Paribahan</span></h1>
-                    <p class="text-white text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates nostrum quae tempora animi <br>cupiditate voluptatem numquam ipsam assumenda ipsum iure?</span></p>
+                    <p class="text-white text-center w-1/2">Sakura Paribahan provides comfortable journeys, punctual services, and extensive coverage across multiple destinations in Bangladesh. It's best Bus in Barishal</p>
                     <button id="buy-tickets" class=" text-md font-bold bg-[#1DD100] px-5 py-3 rounded-md"> <a href="#paribahan-section">Buy Tickets</a> </button>
                 </div>
 
             </div>
-            <div class="flex justify-evenly -mt-12 items-center gap-24 ">
-                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-4 bg-white border-b-4 border-green-500">
+            <div class="flex justify-center -mt-16 items-center gap-24">
+                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-8 bg-white border-b-4 border-green-500">
                     <img src="./images/people.png" alt="">
                     <div class="space-y-2">
                         <h1 class="text-3xl font-bold">500K+</h1>
                         <p>Registered Users</p>
                     </div>
                 </div>
-                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-4 bg-white border-b-4 border-green-500">
+                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-8 bg-white border-b-4 border-green-500">
                     <img src="./images/ticket-cupon.png" alt="">
                     <div class="space-y-2">
                         <h1 class="text-3xl font-bold">1.7 lacks</h1>
                         <p>Ticket sold</p>
                     </div>
                 </div>
-                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-4 bg-white border-b-4 border-green-500">
+                <div class="flex justify-center gap-4 items-center border-0  rounded-xl p-8 bg-white border-b-4 border-green-500">
                     <img src="./images/stoppage.png" alt="">
                     <div class="space-y-2">
                         <h1 class="text-3xl font-bold">80K+</h1>
@@ -151,7 +151,7 @@
             <div class="max-w-screen-xl mx-auto  ">
                  <div class="text-center space-y-5 pt-20 ">
                     <h1 class="text-4xl font-bold">Sakura Paribahan</h1>
-                    <p class="text-[#03071299]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt perferendis <br> alias sit obcaecati dolore laudantium, ad natus</p>
+                    <p class="text-[#03071299] w-1/2 mx-auto">Sakura Paribahan offers safe, convenient, and affordable bus transportation services, serving passengers with comfort and reliability across diverse destinations.It's call Speed Star of all busses</p>
                 </div> 
                 <div class="flex  w-full h-full mt-16 bg-white  rounded-3xl p-8 gap-10">
                     <div class="w-9/12 ">
