--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                 <p class="font-semibold">BDT <span id="total-price">0</span></p>
                             </div>
                             <!-- This is Discunt emni hide thakbe -->
-                            <div id="discount" class="flex justify-between items-center hidden">
+                            <div id="discount" class="flex justify-between items-center hidden text-blue-700">
                                 <p class=" font-semibold">Discount</p>
                                 <p class=" font-semibold">BDT <span id="total-discount">0</span></p>
                             </div>
