--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                                 <input id="coupon-field" class="w-full  rounded outline-none" type="text" placeholder="Have any coupon?">
                                 <button id="apply-btn" class="px-3 py-2 rounded-md bg-[#1fe844] hover:bg-[#1DD100] text-white font-bold">Apply</button>
                             </div>
+                            <div class="border my-4 border border-[#0307121A] "></div>
                             <div class="flex justify-between items-center">
                                 <p class=" font-semibold">Grand Total</p>
                                 <p class=" font-semibold">BDT <span id="grand-total">0</span></p>
